tests/baselines/reference/propertyAccess3.errors.txt
propertyAccess3.ts(2,5): error TS2339: Property 'toBAZ' does not exist on type 'boolean'.


==== propertyAccess3.ts (1 errors) ====
    var foo: boolean;
    foo.toBAZ();
        ~~~~~
!!! error TS2339: Property 'toBAZ' does not exist on type 'boolean'.